<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/menu_language"
            android:icon="@drawable/baseline_language_24"
            android:title="@string/change_language"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_map"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/map"
            app:showAsAction="ifRoom" />
    </group>
</menu>